# rSnipper

./: .gitignore  Cargo.toml
back-end/: .env  .gitignore  Cargo.toml  README.md
back-end/migrations/: 20220630091516_rSnipper.sql
back-end/src/: api.rs  common.rs  main.rs  model.rs  response.rs  router.rs  service.rs
back-end/src/service/: mod.rs  tags.rs
front-end/: .gitignore  components.d.ts  package.json  vite.config.ts
front-end/src/: App.vue  main.ts
front-end/src/components/: AppBar.vue  BottomBar.vue  CatalogSider.vue  MainContent.vue
front-end/src/plugins/: hljs.ts
front-end/src/views/: HomePage.vue
src/: api.rs  main.rs  response.rs  router.rs  service.rs
