[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
poem = "1.3.32"
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
